--- a/src/config_temp.yaml
+++ b/src/config_temp.yaml
@@ -9,10 +9,13 @@ TRAIN_SET: ""
 VALIDATION_SET: ""
 TEST_SET: ""
 
-# index 
+# index
 INDEX_DIR: ""
 INDEX_PREFIX: ""
 CAT_ABBR_DICT: "res/cat_abbr_full.txt"
+INDEX_CACHE_SIZE: 50
 
 # search
 SEARCH_RESULTS_KEEP: 500
+SEARCH_RESULTS_PER_PAGE: 20
+SEARCH_CACHE_SIZE: 50
