--- a/src/config_temp.yaml
+++ b/src/config_temp.yaml
@@ -14,9 +14,13 @@ INDEX_DIR: ""
 INDEX_PREFIX: ""
 CAT_ABBR_DICT: "res/cat_abbr_full.txt"
 INDEX_CACHE_SIZE: 50
+NUM_INDEX_FILES: 1000
 
 # search
 SEARCH_RESULTS_KEEP: 500
 SEARCH_RESULTS_PER_PAGE: 20
 SEARCH_CACHE_SIZE: 50
 BM25_COEFF: 1.5
+
+# front end
+CAT_SPLIT_SYMB: ","
