--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,6 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 .idea/
+/src/se_index/
+src/res/DOC_ID_2_DOC_LEN.json
+src/res/DOC_ID_2_DOC_NO.json
