query suggestion all ngrams

--- a/src/config_server.yaml
+++ b/src/config_server.yaml
@@ -3,7 +3,7 @@
 
 # Source data
 DATA_DIR: ""
-ALL_DATA: "/home/ubuntu/arx_prj/dataset/arxiv-metadata-oai-sample.gz"
+ALL_DATA: "/home/ubuntu/arx_prj/dataset/arxiv-metadata-oai-2020-02-11.json.gz"
 DEV_SET: ""
 TRAIN_SET: ""
 VALIDATION_SET: ""
@@ -14,7 +14,7 @@ INDEX_DIR: "se_index/"
 INDEX_PREFIX: "sample"
 CAT_ABBR_DICT: "res/cat_abbr_full.txt"
 INDEX_CACHE_SIZE: 50
-NUM_INDEX_FILES: 50
+NUM_INDEX_FILES: 200
 DOC_ID_2_DOC_NO: "res/DOC_ID_2_DOC_NO.json" # path to the mapping containing doc_id(str) to doc id (int)
 DOC_ID_2_DOC_LEN: "res/DOC_ID_2_DOC_LEN.json" # path to the mapping containing doc_id(str) to doc length(int)
 
@@ -23,6 +23,11 @@ SEARCH_RESULTS_KEEP: 500
 SEARCH_RESULTS_PER_PAGE: 20
 SEARCH_CACHE_SIZE: 50
 BM25_COEFF: 1.5
+
+# Query suggestion
+UNIGRAM_FILE: "res/unigram.json"
+BIGRAM_FILE: "res/bigram.json"
+TRIGRAM_FILE: "res/trigram.json"
 
 # front end
 CAT_SPLIT_SYMB: ","
