--- a/src/config_server.yaml
+++ b/src/config_server.yaml
@@ -28,6 +28,7 @@ BM25_COEFF: 1.5
 UNIGRAM_FILE: "res/unigram.json"
 BIGRAM_FILE: "res/bigram.json"
 TRIGRAM_FILE: "res/trigram.json"
+ALL_NGRAMS_FILE: "res/all_ngrams.json"
 
 # front end
 CAT_SPLIT_SYMB: ","
