--- a/src/config_temp.yaml
+++ b/src/config_temp.yaml
@@ -24,5 +24,14 @@ SEARCH_RESULTS_PER_PAGE: 20
 SEARCH_CACHE_SIZE: 50
 BM25_COEFF: 1.5
 
+# Query suggestion
+UNIGRAM_FILE: "res/unigram.json"
+BIGRAM_FILE: "res/bigram.json"
+TRIGRAM_FILE: "res/trigram.json"
+ALL_NGRAMS_FILE: "res/all_ngrams.json"
+
 # front end
 CAT_SPLIT_SYMB: ","
+
+# debug
+DEBUG_PRINT: False
