--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,4 @@ src/res/DOC_ID_2_DOC_NO.json
 /mysqlclient-1.4.6-cp36-cp36m-win_amd64.whl
 mysqlclient-1.4.6-cp37-cp37m-win_amd64.whl
 src/.DS_Store
+src/web/node_modules/
