add config: record position and run on server

--- a/src/config_server.yaml
+++ b/src/config_server.yaml
@@ -18,6 +18,7 @@ INDEX_CACHE_SIZE: 100
 NUM_INDEX_FILES: 5 # per key group
 DOC_ID_2_DOC_NO: "res/DOC_ID_2_DOC_NO.json" # path to the mapping containing doc_id(str) to doc id (int)
 DOC_ID_2_DOC_LEN: "res/DOC_ID_2_DOC_LEN.json" # path to the mapping containing doc_id(str) to doc length(int)
+RECORD_POSITION: False
 
 # search
 SEARCH_RESULTS_KEEP: 500
@@ -36,3 +37,6 @@ CAT_SPLIT_SYMB: ","
 
 # debug
 DEBUG_PRINT: True
+
+# Run
+RUN_SERVER: True
