--- a/src/config_temp.yaml
+++ b/src/config_temp.yaml
@@ -17,6 +17,7 @@ INDEX_CACHE_SIZE: 50
 NUM_INDEX_FILES: 1000
 DOC_ID_2_DOC_NO: ".json" # path to the mapping containing doc_id(str) to doc id (int)
 DOC_ID_2_DOC_LEN: ".json" # path to the mapping containing doc_id(str) to doc length(int)
+RECORD_POSITION: False
 
 # search
 SEARCH_RESULTS_KEEP: 500
@@ -35,3 +36,6 @@ CAT_SPLIT_SYMB: ","
 
 # debug
 DEBUG_PRINT: False
+
+# Run
+RUN_SERVER: False
