--- a/src/config_server.yaml
+++ b/src/config_server.yaml
@@ -31,6 +31,10 @@ UNIGRAM_FILE: "res/unigram.json"
 BIGRAM_FILE: "res/bigram.json"
 TRIGRAM_FILE: "res/trigram.json"
 ALL_NGRAMS_FILE: "res/all_ngrams.json"
+UNIGRAM_FILE_FULL: "res/unigram_full.json"
+BIGRAM_FILE_FULL: "res/bigram_full.json"
+AC_DIC: "UNIGRAM_FILE_FULL"
+MAX_WORDS: 2
 
 # front end
 CAT_SPLIT_SYMB: ","
