--- a/src/config_temp.yaml
+++ b/src/config_temp.yaml
@@ -4,6 +4,7 @@
 # Source data
 DATA_DIR: ""
 ALL_DATA: "arxiv-metadata-oai-sample.gz"
+#ALL_DATA: "arxiv-metadata-oai-sample.gz"
 DEV_SET: ""
 TRAIN_SET: ""
 VALIDATION_SET: ""
@@ -26,10 +27,14 @@ SEARCH_CACHE_SIZE: 50
 BM25_COEFF: 1.5
 
 # Query suggestion
-UNIGRAM_FILE: "res/unigram.json"
+UNIGRAM_FILE: "res/unigram_full.json" # len(39725)
 BIGRAM_FILE: "res/bigram.json"
 TRIGRAM_FILE: "res/trigram.json"
-ALL_NGRAMS_FILE: "res/all_ngrams.json"
+ALL_NGRAMS_FILE: "res/all_ngrams.json" # len(1189367)
+UNIGRAM_FILE_FULL: "res/unigram_full.json" # len: 2265793,  # 3.6G
+BIGRAM_FILE_FULL: "res/bigram_full.json"
+AC_DIC: "ALL_NGRAMS_FILE"
+MAX_WORDS: 2
 
 # front end
 CAT_SPLIT_SYMB: ","
