--- a/src/config_server_full.yaml
+++ b/src/config_server_full.yaml
@@ -3,8 +3,8 @@
 
 # Source data
 DATA_DIR: ""
-#ALL_DATA: "/home/ubuntu/arx_prj/dataset/arxiv-metadata-oai-2020-02-11.json.gz"
-ALL_DATA: "/home/ubuntu/arx_prj/dataset/arxiv-metadata-oai-sample.gz"
+ALL_DATA: "/home/ubuntu/arx_prj/dataset/arxiv-metadata-oai-2020-02-11.json.gz"
+#ALL_DATA: "/home/ubuntu/arx_prj/dataset/arxiv-metadata-oai-sample.gz"
 DEV_SET: ""
 TRAIN_SET: ""
 VALIDATION_SET: ""
